# SVO

./: CMakeLists.txt  README.md
include/svo/: IMU_handler.h  config.h  depth_filter.h  feature.h  feature_detection.h  frame.h  frame_handler_base.h  frame_handler_mono.h  initialization.h  map.h  map_drawer.h  point.h  viewer.h
src/: IMU_handler.cpp  bundle_adjustment.cpp  config.cpp  depth_filter.cpp  feature_alignment.cpp  feature_detection.cpp  frame.cpp  frame_handler_base.cpp  frame_handler_mono.cpp  initialization.cpp  map.cpp  map_drawer.cpp  matcher.cpp  sparse_img_align.cpp  viewer.cpp
test/: test_depth_filter.cpp  test_feature_alignment.cpp  test_feature_detection.cpp  test_pipeline.cpp  test_utils.h
